new file:   adcp_information.docx 	new file:   adcp_poster-1.pdf 	new file:   datasets/biomass/01_Biomass-All Cruises-ADCP locations_dattesh_1st_bs.xlsx 	new file:   datasets/biomass/cor_2020_aparna.dat 	new file:   datasets/biomass/cor_2020_ranjan_new_bs_calc.dat 	new file:   figures/adcp_moorings_new11.jpg 	new file:   figures/backscatter_vs_biomass.png 	modified:   figures/biomass_daily_monthly.png         new file: figures/biomass_monthly.png 	new file:   figures/comparison_theoretical_bm_from_each_mode.png 	deleted:    figures/daily_and_monthly.ipynb 	renamed:    figures/figure2_biomass_backscatter.png -> figures/figure2_biomass_backscatter_comparison.png 	modified:   figures/figure_02_biomass_40m_104m.png 	new file:   figures/figures.tar.xz 	new file:   figures/figures/adcp_moorings_new11.jpg 	new file:   figures/figures/backscatter_vs_biomass.png 	new file:   figures/figures/biomass_monthly.png 	new file:   figures/propagation_of_minima_to_ceas.png 	modified:   figures/standing_stock_dep_22_118_all_aval.png 	new file:   lagrida_latex_editor.png 	new file:   scripts/comparison_rj_ap.ipynb 	new file:   scripts/daily_and_monthly.ipynb 	renamed:    figures/daily_and_monthly_old.ipynb -> scripts/daily_and_monthly_old.ipynb 	modified:   writings/bc_writing/bs_citations.bib 	modified:   writings/bc_writing/bs_manuscript.aux 	modified:   writings/bc_writing/bs_manuscript.bbl 	modified:   writings/bc_writing/bs_manuscript.blg 	new file:   writings/bc_writing/bs_manuscript.pdf 	modified:   writings/bc_writing/bs_manuscript.synctex.gz 	modified:   writings/bc_writing/bs_manuscript.tex 	new file:   writings/main_objectives

--- a/writings/bc_writing/bs_citations.bib
+++ b/writings/bc_writing/bs_citations.bib
@@ -722,3 +722,13 @@
 	pages = {318-333},
 	doi = {10.1175/jtech-d-13-00207.1}
 }
+
+@inproceedings{deines1999backscatter,
+  title={Backscatter estimation using broadband acoustic Doppler current profilers},
+  author={Deines, Kent L},
+  booktitle={Proceedings of the IEEE Sixth Working Conference on Current Measurement (Cat. No. 99CH36331)},
+  pages={249--253},
+  year={1999},
+  organization={IEEE}
+}
+
