--- a/writings/bc_writing/bs_manuscript.tex
+++ b/writings/bc_writing/bs_manuscript.tex
@@ -14,7 +14,7 @@
 
 {\Large 
 	\title{Spatio-temporal variability of zooplankton standing stock in eastern Arabian Sea inferred from ADCP backscatter measurements }}
-%\author{Ranjan Kumar Sahu, D. Shankar, P. Amol, $add \   other$}
+\author{Ranjan Kumar Sahu, P. Amol, D.V. Desai, S.G. Aparna,  D. Shankar}
 \date{\today}
 \begin{document}
 	
@@ -39,7 +39,7 @@
 	At present, there are two types of acoustic samplers: non-calibrated single frequency acoustic profiler such as ADCP or calibrated multi and mono frequency acoustic profilers such as zooplankton acoustic profiler (ZAP) and Tracor acoustic profiling system(TAPS). The use of acoustics as a proxy for zooplankton biomass estimation can be traced to \citep{pieper1971study, sameoto1977use} and earlier studies which used echograms to approximate the large-scale horizontal extents \citep{barraclough1969shallow}, and small scale vertical extent \citep{mcnaught1968acoustical}. The relationship between backscatter and the abundance and size of zooplankton was described by \citep{greenlaw1979acoustical} 
 	wherein it was pointed out that single frequency backscatter can be used to estimate abundance if mean zooplankter size is known. This paved the way for use of single frequency acoustic profiler. A drastic increase in study temporal and spatial variation of zooplankton biomass using  backscatter-proxy came in 1990s by introduction of high frequency echosounders, with studies \citep{flagg1989use, wiebe1990sound, batchelder00981, greene1998three, rippeth1998diur} methodically showing acoustic backscatter estimated zooplankton biomass in various shelf and slope locations around  North Atlantic, North pacific location. The foundation for further research that investigated the potential of acoustic backscatter from ADCPs and multi frequency echosounders in assessing zooplankton biomass and comprehending zooplankton dynamics in diverse maritime habitats was established by these initial explorative experiments.
 	
-	 Acoustic backscatter and zooplankton biomass have been better understood as a result of technological and methodological developments over time. Net sampling augmented ADCP backscatter have been used to study DVM and the spatial and temporal variability of zooplankton biomass by \citep{cisewski2010seasonal,smeti2015spatial, guerra2019zooplankton} in various marine regions, such as the Southwestern Pacific, the Lazarev Sea in Antarctica and the Corsica Channel in the north-western Mediterranean Sea.	The zooplankton biomass variation in the Arabian sea has been studied during JGOFS programme in 1990s \citep{herring1998across, nair1999arabian, fielding2004biological, smith2005mesozooplankton}. However, their studies were limited to the cruise duration as vessel mounted ADCPs were predominantly used; hence longterm data was sparsely produced. The first such study to fully exploit the immense potential of ADCPs in EAS was carried out by \citep{aparna2022seasonal} using ADCP moorings deployed on continental slopes off the Indian west coasts \citep{amol2014observed, chaudhuri2020observed}.
+	 Acoustic backscatter and zooplankton biomass have been better understood as a result of technological and methodological developments over time. Net sampling augmented ADCP backscatter have been used to study DVM and the spatial and temporal variability of zooplankton biomass by \citep{cisewski2010seasonal,smeti2015spatial, guerra2019zooplankton} in various marine regions, such as the Southwestern Pacific, the Lazarev Sea in Antarctica and the Corsica Channel in the north-western Mediterranean Sea.	The zooplankton biomass variation in the Arabian sea has been studied during JGOFS programme in 1990s \citep{herring1998across, nair1999arabian, fielding2004biological, smith2005mesozooplankton}. However, their studies were limited to the cruise duration as vessel mounted ADCPs were predominantly used; hence long-term data was sparsely produced. The first such study to fully exploit the immense potential of ADCPs in EAS was carried out by \citep{aparna2022seasonal} using ADCP moorings deployed on continental slopes off the Indian west coasts \citep{amol2014observed, chaudhuri2020observed}.
 	
 	\subsection{Objective and scope of the manuscript}
 	
@@ -73,7 +73,7 @@
 	{\footnotesize
 
 		\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip} % Adjust the spacing above and below the caption
-		\caption{ ADCP deployment detatils at the locations. The temporal resolution is 1 hour, bin size(vertical resolution) 4 m. All ADCPs are operated at 153.3 kHz. The moorings are at a water column depth of ~950 - 1200 m on the continental slope and are serviced on yearly basis according to ship availability. The 6th column consists of Reference echo intensity (Er) for each beam, while the 7th column contains the corresponding RSSI conversion factor \citep{deinis}.}
+		\caption{ADCP deployment details at the locations. The temporal resolution is 1 hour, bin size(vertical resolution) 4 m. All ADCPs are operated at 153.3 kHz. The moorings are at a water column depth of ~950 - 1200 m on the continental slope and are serviced on yearly basis according to ship availability. The 6th column consists of Reference echo intensity (Er) for each beam, while the 7th column contains the corresponding RSSI conversion factor \citep{deines1999backscatter}.}
 		\begin{adjustwidth}{0in}{0in} 
 			\begin{tabular}{ccccccc}
 				
@@ -206,7 +206,7 @@
 \newpage
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.6\textwidth]{/home/scilab/Documents/figures/map_roi.png} 
+	\includegraphics[width=0.6\textwidth]{/media/scilab/disk_ranjan/works/backscatter_wc/figures/adcp_moorings_new1.jpg} 
 	\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip,width=0.4\textwidth}
 	\caption{Map showing region of interest. The slope moorings are deployed at ~ 1000 m depth.}
 	\label{fig:fig1}
@@ -215,7 +215,7 @@
 \newpage
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.5\textwidth]{/home/scilab/Documents/figures/linear_fit_line.png} 
+	\includegraphics[width=0.5\textwidth]{/media/scilab/disk_ranjan/works/backscatter_wc/figures/backscatter_vs_biomass.png} 
 	\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip,width=0.7\textwidth}
 	\caption{The linear fit line of Biomass (taken in log of biomass) and Backscatter. The linear fit line is within the error range of previous result of \citep{aparna2022seasonal} onto which latest zooplankton volumetric sample data is added.}
 	\label{fig:fig2}
@@ -227,7 +227,7 @@
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{/home/scilab/Documents/figures/biomass_daily_monthly.png} 
+	\includegraphics[width=\textwidth]{/media/scilab/disk_ranjan/works/backscatter_wc/figures/biomass_daily_monthly.png} 
 	\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip,width=\textwidth}
 	\caption{The Daily and monthly averaged biomass for EAS moorings, north (top) to south (bottom). The dark contours are marking 215 $mg m^{-3}$.}
 	\label{fig:fig3}
@@ -235,7 +235,7 @@
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{/home/scilab/Documents/figures/figure_02_biomass_40m_104m.png} 
+	\includegraphics[width=\textwidth]{/media/scilab/disk_ranjan/works/backscatter_wc/figures/figure_02_biomass_40m_104m.png} 
 	\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip,width=\textwidth}
 	\caption{The daily biomass at depth of 40 m and 104 m for all locations shown by grey and cyan curves. The black and blue lines shows the 30 day rolling averaged biomass. }
 	\label{fig:fig4}
@@ -243,7 +243,7 @@
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{/home/scilab/Documents/figures/standing_stock_dep_22_118_all_aval.png} 
+	\includegraphics[width=\textwidth]{/media/scilab/disk_ranjan/works/backscatter_wc/figures/standing_stock_dep_22_118_all_aval.png} 
 	\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip,width=\textwidth}
 	\caption{}
 	\label{fig:fig5}
