modified:   figures/biomass_daily_monthly.png 	modified:   figures/biomass_monthly.png 	deleted:    figures/figures.tar.xz 	modified:   figures/propagation_of_minima_to_ceas.png 	modified:   figures/standing_stock_dep_22_118_all_aval.png 	modified:   writings/bc_writing/bs_citations.bib 	modified:   writings/bc_writing/bs_manuscript.aux 	modified:   writings/bc_writing/bs_manuscript.bbl 	modified:   writings/bc_writing/bs_manuscript.blg 	new file:   writings/bc_writing/bs_manuscript.out 	modified:   writings/bc_writing/bs_manuscript.synctex.gz 	modified:   writings/bc_writing/bs_manuscript.tex 	renamed:    writings/bc_writing/bs_manuscript.pdf -> writings/bc_writing/draft_backscatter_06_may_24.pdf

--- a/writings/bc_writing/bs_citations.bib
+++ b/writings/bc_writing/bs_citations.bib
@@ -701,7 +701,7 @@
 }
 @article{greenlaw1979acoustical,
   title={Acoustical estimation of zooplankton populations 1},
-  author={Greenlaw, Charles F}
+  author={Greenlaw, Charles F},
   journal={Limnology and Oceanography},
   volume={24},
   number={2},
@@ -730,5 +730,63 @@
   pages={249--253},
   year={1999},
   organization={IEEE}
+}
+
+@article{chatterjee2012new,
+	title={A new atlas of temperature and salinity for the North Indian Ocean},
+	author={Chatterjee, Abhisek and Shankar, D and Shenoi, SSC and Reddy, GV and Michael, GS and Ravichandran, M and Gopalkrishna, VV and Rama Rao, EP and Udaya Bhaskar, TVS and Sanjeevan, VN},
+	journal={Journal of Earth System Science},
+	volume={121},
+	pages={559--593},
+	year={2012},
+	publisher={Springer}
+}
+
+@inproceedings{mullison2017backscatter,
+	title={Backscatter estimation using broadband acoustic doppler current profilers-updated},
+	author={Mullison, Jerry},
+	booktitle={Proceedings of the ASCE Hydraulic Measurements \& Experimental Methods Conference, Durham, NH, USA},
+	pages={9--12},
+	year={2017}
+}
+@article{mukherjee2014observed,
+  title={Observed seasonal and intraseasonal variability of the East India Coastal Current on the continental slope},
+  author={Mukherjee, A and Shankar, D and Fernando, V and Amol, P and Aparna, SG and Fernandes, R and Michael, GS and Khalap, ST and Satelkar, NP and Agarvadekar, Y and others},
+  journal={Journal of Earth System Science},
+  volume={123},
+  number={6},
+  pages={1197--1232},
+  year={2014},
+  publisher={Springer}
+}
+@article{mukhopadhyay2020observed,
+  title={Observed variability of the East India Coastal Current on the continental slope during 2009--2018},
+  author={Mukhopadhyay, S and Shankar, D and Aparna, SG and Mukherjee, A and Fernando, V and Kankonkar, A and Khalap, S and Satelkar, NP and Gaonkar, MG and Tari, AP and others},
+  journal={Journal of Earth System Science},
+  volume={129},
+  pages={1--22},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{heywood1991estimation,
+	title={Estimation of zooplankton abundance from shipborne ADCP backscatter},
+	author={Heywood, Karen J and Scrope-Howe, S and Barton, ED},
+	journal={Deep Sea Research Part A. Oceanographic Research Papers},
+	volume={38},
+	number={6},
+	pages={677--691},
+	year={1991},
+	publisher={Elsevier}
+}
+@article{hamilton2013links,
+	title={Links between ocean properties, ice cover, and plankton dynamics on interannual time scales in the Canadian Arctic Archipelago},
+	author={Hamilton, James M and Collins, Kate and Prinsenberg, Simon J},
+	journal={Journal of Geophysical Research: Oceans},
+	volume={118},
+	number={10},
+	pages={5625--5639},
+	year={2013},
+	publisher={Wiley Online Library}
 }
 
