--- a/writings/bc_writing/bs_manuscript.tex
+++ b/writings/bc_writing/bs_manuscript.tex
@@ -8,8 +8,8 @@
 \usepackage{graphicx} % For including graphics
 % Add line numbers to the document
 \usepackage{geometry}
-
-
+%\usepackage{hyperref}
+\usepackage[colorlinks = true,urlcolor  = blue,citecolor=blue]{hyperref}
 \linespread{2} 
 
 {\Large 
@@ -22,12 +22,13 @@
 	\linenumbers
 	\section*{Abstract}
 	
-	The study focuses on the zooplankton standing stock in the eastern Arabian sea (EAS) and aims to understand its spatio-temporal variation using ADCP(acoustic Doppler current profiler) backscatter measurements. The ADCP moorings were deployed at multiple locations on the continental slope of the west coast of India; of which we have used data from October 2017 to January 2023. The ADCP (operating frequency 153.3 kHz) uses backscatter from or sediments or organisms such as copepods, ctenophores, salps and amphipods greater than 1 cm to calculate current profile. The conversion from backscatter to biomass is based on volumetric zooplankton sampling at the respective locations. Analysis of the data over 25-140 m shows that the backscatter and zooplankton biomass decrease from the upper ocean (215 mg m$^{-3}$ biomass contour) to the lower depths. Seasonal variation is noticed in the monthly climatology zooplankton standing stock (integral of the biomass over the 20-140m water column) along with change as we move to northward slope moorings in EAS. Complementary parameters (mixed layer depth, net primary production, Chl-a, sea surface temperature) is used to explain the processes leading to growth or decay in zooplankton biomass and on their migratory behaviour. Additionally, we have studied the effect of wind induced vertical mixing events. The findings of this research will contribute to a better understanding of the zooplankton dynamics in the EAS and provide valuable insights into the seasonal and annual cycles of zooplankton standing stock.
-	
+We use acoustic Doppler current profiler (ADCP) backscatter measurements to map
+the spaio-temporal variation of zooplankton standing stock in the eastern Arabian Sea (EAS). The ADCP moorings were deployed at seven locations on the continental slope off the west coast of India; we use data from October 2017 to December 2023. The 153.3 kHz ADCP uses backscatter from sediments or organisms such as copepods, ctenophores, salps and amphipods greater than 1 cm to calculate current profile. The backscatter is obtained from echo intensity using RSSI conversion factor after doing necessary calibrations. The conversion from backscatter to biomass is based on volumetric zooplankton sampling at the respective locations. Analysis of the data over 25 – 140 m shows that the backscatter and zooplankton biomass decrease from the upper ocean (215 $m\ g^{-3}$ biomass contour) to the lower depths. Changes are observed in the seasonal variation of the monthly climatology of zooplankton standing stock (integral of the biomass over 20 – 140 m water
+column) as we move to poleward along the slope in EAS. The range of variation of standing stock is lowest at Kanyakumari, followed by Okha, which lie at the southern and northern boundary of the EAS, respectively. Complementary variables are used to explain the processes leading to growth or decay of zooplankton biomass.	
 	\newpage
 	\section{Introduction}
 	\subsection{Background}
-	Zooplankton plays a vital role in food web of pelagic ecosystem by enabling the hierarchical transport of organic matter from primary producers to higher trophic levels impacting the fish population and the carbon pump of the deep ocean \citep{ohman2001density,le2016global}. They are presumably the largest migrating organisms in terms of biomass \citep{hays2003review} which occurs in Diel Vertical Migration (DVM). Zooplanktons depend not only on phytoplankton but other environmental parameters (e.g. Mixed layer depth, insolation, Oxygen, thermocline, nutrient availability, chlorophyll concentration and daily primary production). The biological productivity of the ocean is essentially connected with physics and chemistry \citep{subrahmanyan1959studiespart2, ryther1966primary, qasim1977biological, nair1970primary,banse1995zooplankton,mccreary2009biophysical, vijith2016consequences}. The dynamic ocean results in varying physico-chemical properties, leading to bloom and growth of planktons in favourable conditions. The changes are strongly influenced by the seasonal cycle in the North Indian Ocean (NIO; north of ~5 $^o$N of Indian Ocean). The eastern boundary of Arabian Sea contains the West India Coastal Current (WICC; \citep{patil1964hydrography,ramamirtham1965hydrography, banse1968hydrography,shetye1991coastal,mccreary1993numerical, shankar1997dynamics, shetye1998coastal, maheswaran2000upwelling, amol2014observed, chaudhuri2020observed,chaudhuri2021observed}) which reverses seasonally, flowing poleward (equatorward) during November to February (June to September). 
+	Zooplankton plays a vital role in food web of pelagic ecosystem by enabling the hierarchical transport of organic matter from primary producers to higher trophic levels impacting the fish population and the carbon pump of the deep ocean \citep{ohman2001density,le2016global}. They are presumably the largest migrating organisms in terms of biomass \citep{hays2003review} which occurs in Diel Vertical Migration (DVM). Zooplanktons depend not only on phytoplankton but other environmental parameters (e.g. Mixed layer depth, insolation, Oxygen, thermocline, nutrient availability, chlorophyll concentration and daily primary production). The biological productivity of the ocean is essentially connected with physics and chemistry \citep{subrahmanyan1959studiespart2, ryther1966primary, qasim1977biological, nair1970primary,banse1995zooplankton,mccreary2009biophysical, vijith2016consequences,amol2020modulation}. The dynamic ocean results in varying physico-chemical properties, leading to bloom and growth of planktons in favourable conditions. The changes are strongly influenced by the seasonal cycle in the North Indian Ocean (NIO; north of ~5 $^o$N of Indian Ocean). The eastern boundary of Arabian Sea contains the West India Coastal Current (WICC; \citep{patil1964hydrography,ramamirtham1965hydrography, banse1968hydrography,shetye1991coastal,mccreary1993numerical, shankar1997dynamics, shetye1998coastal, maheswaran2000upwelling, amol2014observed, chaudhuri2020observed,chaudhuri2021observed}) which reverses seasonally, flowing poleward (equator-ward) during November to February (June to September). 
 	
 	The direct consequence of this reversal is the seasonal cycle of thermocline, oxycline and thickness of mixed Layer Depth (MLD) induced by upwelling favourable conditions in summer and downwelling favourable conditions in winter in eastern Arabian Sea (EAS). Further, the phytoplankton biomass and chlorophyll concentration changes with the season \citep{subrahmanyan1960studies, banse1968hydrography, levy2007basin, vijith2016consequences}. Upwelling in  summer monsoon leads to maximum chlorophyll growth in the entire EAS \citep{ banse1968hydrography, banse2000geographical, mccreary2009biophysical, hood2017biogeochemical}. During winter monsoon, the convective mixing induced winter mixed layer \citep{shetye1992does, madhupratap1996mechanism, levy2007basin, vijith2016consequences, shankar2016inhibition, keerthi2017physical} results in winter chlorophyll peak in northern EAS (NEAS) while the downwelling Rossby waves modulate chlorophyll along the southern EAS (SEAS) albeit limited to coast and islands \citep{amol2020modulation}. (For a detailed description on EAS division, please refer figure 1 of \citep{shankar2019role}.
 	
@@ -37,18 +38,41 @@
 	
 	\subsection{ADCP backscatter and zooplankton biomass}
 	At present, there are two types of acoustic samplers: non-calibrated single frequency acoustic profiler such as ADCP or calibrated multi and mono frequency acoustic profilers such as zooplankton acoustic profiler (ZAP) and Tracor acoustic profiling system(TAPS). The use of acoustics as a proxy for zooplankton biomass estimation can be traced to \citep{pieper1971study, sameoto1977use} and earlier studies which used echograms to approximate the large-scale horizontal extents \citep{barraclough1969shallow}, and small scale vertical extent \citep{mcnaught1968acoustical}. The relationship between backscatter and the abundance and size of zooplankton was described by \citep{greenlaw1979acoustical} 
-	wherein it was pointed out that single frequency backscatter can be used to estimate abundance if mean zooplankter size is known. This paved the way for use of single frequency acoustic profiler. A drastic increase in study temporal and spatial variation of zooplankton biomass using  backscatter-proxy came in 1990s by introduction of high frequency echosounders, with studies \citep{flagg1989use, wiebe1990sound, batchelder00981, greene1998three, rippeth1998diur} methodically showing acoustic backscatter estimated zooplankton biomass in various shelf and slope locations around  North Atlantic, North pacific location. The foundation for further research that investigated the potential of acoustic backscatter from ADCPs and multi frequency echosounders in assessing zooplankton biomass and comprehending zooplankton dynamics in diverse maritime habitats was established by these initial explorative experiments.
+	wherein it was pointed out that single frequency backscatter can be used to estimate abundance if mean zooplankton size is known. This paved the way for use of single frequency acoustic profiler. A drastic increase in study temporal and spatial variation of zooplankton biomass using  backscatter-proxy came in 1990s by introduction of high frequency echo sounders, with studies \citep{flagg1989use, wiebe1990sound, batchelder00981, greene1998three, rippeth1998diur} methodically showing acoustic backscatter estimated zooplankton biomass in various shelf and slope locations around  North Atlantic, North pacific location. The foundation for further research that investigated the potential of acoustic backscatter from ADCPs and multi frequency echo sounders in assessing zooplankton biomass and comprehending zooplankton dynamics in diverse maritime habitats was established by these initial explorative experiments.
 	
-	 Acoustic backscatter and zooplankton biomass have been better understood as a result of technological and methodological developments over time. Net sampling augmented ADCP backscatter have been used to study DVM and the spatial and temporal variability of zooplankton biomass by \citep{cisewski2010seasonal,smeti2015spatial, guerra2019zooplankton} in various marine regions, such as the Southwestern Pacific, the Lazarev Sea in Antarctica and the Corsica Channel in the north-western Mediterranean Sea.	The zooplankton biomass variation in the Arabian sea has been studied during JGOFS programme in 1990s \citep{herring1998across, nair1999arabian, fielding2004biological, smith2005mesozooplankton}. However, their studies were limited to the cruise duration as vessel mounted ADCPs were predominantly used; hence long-term data was sparsely produced. The first such study to fully exploit the immense potential of ADCPs in EAS was carried out by \citep{aparna2022seasonal} using ADCP moorings deployed on continental slopes off the Indian west coasts \citep{amol2014observed, chaudhuri2020observed}.
+	 Acoustic backscatter and zooplankton biomass have been better understood as a result of technological and methodological developments over time. Net sampling augmented ADCP backscatter have been used to study DVM and the spatial and temporal variability of zooplankton biomass by \citep{cisewski2010seasonal,smeti2015spatial, guerra2019zooplankton} in different marine regions, such as the Southwestern Pacific, the Lazarev Sea in Antarctica and the Corsica Channel in the north-western Mediterranean Sea.	The zooplankton biomass variation in the Arabian sea has been studied during JGOFS programme in 1990s \citep{herring1998across, nair1999arabian, fielding2004biological, smith2005mesozooplankton}. However, their studies were limited to the cruise duration as vessel mounted ADCPs were predominantly used; hence long-term data was sparsely produced. The first such study to fully exploit the immense potential of ADCPs in EAS was carried out by \citep{aparna2022seasonal} using ADCP moorings deployed on continental slopes off the Indian west coasts \citep{amol2014observed, chaudhuri2020observed}.
 	
 	\subsection{Objective and scope of the manuscript}
 	
 	A network of ADCPs has been installed off the continental slope and shelf on the west coast of India. This ADCPs have enabled a rigorous view of intraseasonal to seasonal scale variability \citep{amol2014observed, chaudhuri2020observed}. Initially a network of 4 ADCPs (off Mumbai, Goa, Kollam and Kanyakumari) on continental slope, it has been extended to include 3 more moorings (off Okha from 2018, Jaigarh and Udupi from 2017). In the recent study \citep{aparna2022seasonal} have used ADCP moorings off  Mumbai, Goa and Kollam to explain the temporal variability of zooplankton biomass. The study showed that the zooplankton peaks (and troughs) is not only non-uniform in latitude but also heavily influenced by the oxygen minimum zone, MLD and the seasonal upwelling/downwelling conditions. Stark contrast in the phytoplankton bloom and subsequence  growth of zooplankton or the lack thereof was observed in the EAS regimes.
 
 
-	We build upon the existing work by extending to include the newly incorporated ADCPs so as to have a better understanding in the latitudinal variation of zooplankton biomass in EAS. The paper is organized as follows, datasets and methods employed are described in detail in Secion 2. Section 3 describes the observed seasonal cycle of zooplankton biomass and standing stock. The role of mixed layer depth, net primary production, sea surface temperature, wind forcing and circulation in determining the biomass is discussed in results section 4, with conclusion in section 5.
+	We build upon the existing work by extending to include the newly incorporated ADCPs so as to have a better understanding in the latitudinal variation of zooplankton biomass in EAS. The paper is organized as follows; datasets and methods employed are described in detail in Section 2. Section 3 describes the observed seasonal cycle of zooplankton biomass and standing stock. The role of mixed layer depth, net primary production, sea surface temperature, wind forcing and circulation in determining the biomass is discussed in results section 4, with conclusion in section 5.
+	
 	\section{Data and methods}
-
+	The  backscatter data from ADCP and the zooplankton samples collected from the periphery of mooring is described in this section. The methodology followed in processing ADCP data and estimation of backscatter and subsequently the zooplankton biomass is discussed. The backscatter derived from the echo intensity of the seven ADCP mooring deployed on the continental slope off the Indian west coast is the primary data we have use in this manuscript. The moorings details are summarised in \tablename{1}. In situ biomass data from volumetric zooplankton samples are used to validate and correlate with backscatter. In addition, we have used the monthly climatology of temperature and salinity \citep{chatterjee2012new} and the net primary productivity from MODIS (Moderate Resolution Imaging Spectroradiometer) and VIIRS (Visible Infrared Imaging Radiometer Suite) from global NPP estimates (\href{http://sites.science.oregonstate.edu/ocean.productivity}{http://sites.science.oregonstate.edu/ocean.productivity}). 
+	
+	\subsection{ADCP data and Backscatter estimation}
+	The ADCPs were deployed on the continental slope off the Indian west coast. Initially a set of 3 ADCPs, it was gradually extended to cover the entire EAS basin from Okha (22.26$^o$N) in north to Kanyakumari (6.96 $^o$N) in south. The moorings are serviced on yearly basis usually during October-November or in winter monsoon months. The ADCPs are of RD Instruments, upward-looking and operate at 153.3 kHz. While utmost care is taken to position the instrument at  $\sim$ 200 m depth, yet for some deployments it's shallow or deeper owing to drift caused by floater buoyancy - anchor weight balance. Data was collected at hourly interval and the bin size was set to 4 m. The echoes at surface to 10 \% range (~20 m) means the data at these is rendered useless and is discarded from further use. 
+	
+	The procedure followed in processing of the ADCP data are described in \citep{amol2014observed} and \citep{mukherjee2014observed}. An addition to their methodology was to do depth correction to accommodate the vertical movement of ADCP buoys \citep{chaudhuri2020observed, mukhopadhyay2020observed}
+    using data from pressure sensor mounted on the instrument. We have followed the methodology laid down in \citep{aparna2022seasonal} to derive the backscatter time series from ADCP echo intensity data which is discussed later paragraph. The gaps are filled using the grafting method of \citep{mukhopadhyay2020observed} once the zooplankton biomass time series is constructed.
+    
+	The primary objective of ADCP usage is to obtain vertical current profile at a point location. It is achieved by using the echo intensity received at the ADCP transducer. The instrument sensors doesn't directly give backscatter, as echo intensity is range independent. Range correction has to be performed before echo intensity (E) is converted to Backscatter (B). Received signal strength indicator (RSSI), also called the conversion factor (Kc) which is specific to a sensor is used along with the corresponding reference echo intensity (Er). It's important to state that for the same device Kc remains unchanged while Er varies over each subsequent deployment. The backscattering strength (in dB) is given by \citep{mullison2017backscatter}:
+	
+	$B = [C - L_{DBM}-P_{DBW}] + 2\alpha R + {10 log_{10}[(T_{TD}+273.16)R^2] } + {10log_{10} [10^{K_c(E-E_r)/10}-1]}$
+	
+	where $C$ is an empirical constant, $L_{DBM}$ is 10$log_{10}L$ where $L$ is the transmit pulse length in meters, $P_{DBW}$ is 10$log_{10}P$ ($P$ is  transmitted power in watts), $\alpha$ is the sound absorption coefficient of water (in $dB\ m^{-1}$),  $T_{TD}$ is the temperature (in $^o\ C$) at the depth of positioned instrument, $R$  is the slant range (in meters) from transducer to the scatterers and $E_r$ is	the reference level of $E$ taken in real-time (unit counts). $E_r$ in our case is taken from first (last) measured profile when the instrument is in air before (after) deployment (retrieval). The backscattering strength is referenced to ($4\pi m^{-1}$) \citep{deines1999backscatter, mullison2017backscatter}.  \citet{aparna2022seasonal} has discussed the relevance of each of the term to the total backscattering strength. Our analysis also suggests that the $\alpha$ does not affect the final results. 
+	
+	\subsection{Zooplankton data and estimation of biomass}
+	The zooplankton samples were collected in the vicinity ($\sim$ 10 km) of ADCP mooring site twice; once prior retrieval and again post deployment of moorings so that there is overlap in the ADCP time instance and in situ zooplankton samples. The sampling is done at the mooring location during servicing cruises on board RV Sindhu Sankalp and RV Sindhu Sadhana (Table 2). Multi-plankton net (MPN) (100 $\mu m$ mesh size, 0.5 $m^2$ mouth area) was used to get samples in the pre-determined depth ranges; water volume filtered was calculated by the product of sampling depth range and the mouth area of net. The depth range and timing of sample collection was different throughout the MPN hauls. From 2020 onwards, the depth-range was standardised to the bins of 0 - 25, 25 - 50, 50 - 75, 75 - 100, 100 - 150 (units are in meters). The collected zooplankton samples were then preserved in 5 \% formaldehyde solution until it's transferred to laboratory. To measure zooplankton wet weight accurately, the gelatinous forms/salps were separated. \citep{aparna2022seasonal} had reposted the calanoid copepods, cyclopoid copepods, Poecilostomatoida, Harpacticoida, appendicularians, euphausids, ostracods, and
+	chaetognaths as the major groups of zooplankton s contributing to the biomass of net samples from the mooring sites {\underline{this has to be updated to include later samples}}. 
+	The backscatter obtained earlier is averaged in vertical corresponding to the specific MPN hauls for each site. The backscatter is linear regressed with respective biomass to establish their relationship, which has been demonstrated in numerous previous studies \citep{flagg1989use,heywood1991estimation,jiang2007temporal,aparna2022seasonal}. 
+	
+	
+	text note
+	  
+	
 	\newpage
 	
 	
