new file:   figures/aparna_2020.png 	new file:   figures/aparna_ranjan_climatology_comparison.png 	modified:   figures/backscatter_vs_biomass.png 	new file:   figures/biomass_40m_104m.png 	modified:   figures/biomass_daily_monthly.png 	modified:   figures/biomass_monthly.png 	new file:   figures/climatology_biomass.png 	new file:   figures/climatology_biomass_ss_chl.png 	deleted:    figures/figure_02_biomass_40m_104m.png 	new file:   figures/old/biomass_40m_104m.png 	new file:   figures/old/biomass_40m_104m_cyan.png 	new file:   figures/old/standing_stock_dep_22_118_all_aval.png 	new file:   figures/oxygen.png 	modified:   figures/standing_stock_dep_22_118_all_aval.png 	new file:   figures/temperature.png 	new file:   figures/west_coast_wavelet_40m.png 	new file:   figures/west_coast_wavelet_40m_scale.png 	modified:   writings/bc_writing/bs_citations.bib 	modified:   writings/bc_writing/bs_manuscript.tex

--- a/writings/bc_writing/bs_citations.bib
+++ b/writings/bc_writing/bs_citations.bib
@@ -789,4 +789,77 @@
 	year={2013},
 	publisher={Wiley Online Library}
 }
-
+@article{padmavati1998vertical,
+	title={Vertical distribution of mesozooplankton in the central and eastern Arabian Sea during the winter monsoon},
+	author={Padmavati, G and Haridas, P and Nair, KKC and Gopalakrishnan, TC and Shiney, P and Madhupratap, M},
+	journal={Journal of Plankton Research},
+	volume={20},
+	number={2},
+	pages={343--354},
+	year={1998},
+	publisher={Oxford University Press}
+}
+@article{inoue2016diel,
+	title={Diel vertical migration of zooplankton at the S 1 biogeochemical mooring revealed from acoustic backscattering strength},
+	author={Inoue, Ryuichiro and Kitamura, Minoru and Fujiki, Tetsuichi},
+	journal={Journal of Geophysical Research: Oceans},
+	volume={121},
+	number={2},
+	pages={1031--1050},
+	year={2016},
+	publisher={Wiley Online Library}
+}
+@article{ashjian2002distribution,
+	title={Distribution, annual cycle, and vertical migration of acoustically derived biomass in the Arabian Sea during 1994--1995},
+	author={Ashjian, Carin J and Smith, Sharon L and Flagg, Charles N and Idrisi, Nasseer},
+	journal={Deep Sea Research Part II: Topical Studies in Oceanography},
+	volume={49},
+	number={12},
+	pages={2377--2402},
+	year={2002},
+	publisher={Elsevier}
+}
+@journal-article{Friedland.2012,
+	author = "Friedland, Kevin D. and Stock, Charles A. and Drinkwater, Kenneth F. and Link, Jason S. and Leaf, Robert T. and Shank, Burton and Rose, Julie M. and Pilskaln, Cynthia H. and Fogarty, Michael J.",
+	doi = "10.1371/journal.pone.0028945",
+	title = "Pathways Between Primary Production and Fisheries Yields of Large Marine Ecosystems",
+	journal = "Plos One",
+	year = "2012"
+}
+@article{silsbe2016cafe,
+	title={The CAFE model: A net production model for global ocean phytoplankton},
+	author={Silsbe, Greg M and Behrenfeld, Michael J and Halsey, Kimberly H and Milligan, Allen J and Westberry, Toby K},
+	journal={Global Biogeochemical Cycles},
+	volume={30},
+	number={12},
+	pages={1756--1777},
+	year={2016},
+	publisher={Wiley Online Library}
+}
+@article{banse1994overview,
+	title={Overview of research efforts and results in the Arabian Sea, 1960--1990},
+	author={Banse, Karl},
+	journal={Biogeochemistry of the Arabian Sea. Proceedings of the Indian Academy of Sciences, Lotus Printers, New Delhi, India},
+	pages={7--25},
+	year={1994}
+}
+@article{madhupratap2001mesozooplankton,
+	title={Mesozooplankton biomass, composition and distribution in the Arabian Sea during the fall intermonsoon: implications of oxygen gradients},
+	author={Madhupratap, M and Gopalakrishnan, TC and Haridas, P and Nair, KKC},
+	journal={Deep Sea Research Part II: Topical Studies in Oceanography},
+	volume={48},
+	number={6-7},
+	pages={1345--1368},
+	year={2001},
+	publisher={Elsevier}
+}
+@article{wishner1998mesozooplankton,
+	title={Mesozooplankton biomass in the upper 1000 m in the Arabian Sea: overall seasonal and geographic patterns, and relationship to oxygen gradients},
+	author={Wishner, Karen F and Gowing, Marcia M and Gelfman, Celia},
+	journal={Deep Sea Research Part II: Topical Studies in Oceanography},
+	volume={45},
+	number={10-11},
+	pages={2405--2432},
+	year={1998},
+	publisher={Elsevier}
+}
